--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
       <div class="modal-body">
       </div>
       <div class="modal-footer">
-        <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+        <button type="button" class="btn btn-default" data-bs-dismiss="modal">Close</button>
       </div>
     </div>
   </div>
@@ -228,19 +228,19 @@
       <section id="eraTwo" class="spacerTwo"> <!--second era 1900s-->
         <div id="wrap_era_two"> 
           <div id="era_two_first" class="time_wrap">
-            <a data-toggle="modal" href="1831.html" data-remote="false" data-target="#eraOneFirst">
+            <a data-bs-toggle="modal" href="1831.html" data-remote="false" data-bs-target="#eraOneFirst">
               <img src="images/1831.png" alt="1831">
             </a> 
             <h3 class="year">1831</h3>
           </div><!--  era_two_first : first image and text wrap -->
           <div id="era_two_mid" class="time_wrap">
-            <a data-toggle="modal" href="1800s_mid.html" data-remote="false" data-target="#eraOneFirst">
+            <a data-bs-toggle="modal" href="1800s_mid.html" data-remote="false" data-bs-target="#eraOneFirst">
             <img src="images/1800_mid.png" alt="1800">    
             </a>
             <h3 class="year">Mid - Late 1800s</h3>
           </div><!--  era_two_mid  -->
           <div id="era_two_second" class="time_wrap">
-            <a data-toggle="modal" href="1890.html" data-remote="false" data-target="#eraOneFirst">
+            <a data-bs-toggle="modal" href="1890.html" data-remote="false" data-bs-target="#eraOneFirst">
               <img src="images/1890.png" alt="1890">  
             </a> 
             <h3 class="year">1890</h3>
@@ -252,14 +252,14 @@
       <section id="eraThree" class="spacerThree"> <!--third era 1900s-->
         <div id="wrap_era_three">
           <div id="era_three_first" class="time_wrap">
-            <a data-toggle="modal" href="1906.html" data-remote="false" data-target="#eraOneFirst">
+            <a data-bs-toggle="modal" href="1906.html" data-remote="false" data-bs-target="#eraOneFirst">
               <img src="images/1907.png" alt="1906">
             </a> 
             <h3 class="year">1906</h3>         
           </div><!--  era_three_second: image and text wrap -->
         
           <div id="era_three_second" class="time_wrap">
-            <a data-toggle="modal" href="1907.html" data-remote="false" data-target="#eraOneFirst">
+            <a data-bs-toggle="modal" href="1907.html" data-remote="false" data-bs-target="#eraOneFirst">
               <img src="images/1906.png" alt="1907">
             </a>
             <h3 class="year">1907</h3>
@@ -271,7 +271,7 @@
       <section id="eraFour" class="spacerFour"> <!--fourth era 1910ss-->
         <div id="wrap_era_four">
           <div id="era_four_first" class="time_wrap">
-            <a data-toggle="modal" href="1912.html" data-remote="false" data-target="#eraOneFirst">
+            <a data-bs-toggle="modal" href="1912.html" data-remote="false" data-bs-target="#eraOneFirst">
               <img src="images/1912.png" alt="1912">
             </a>
             <h3 class="year">1912 - 1915</h3>
@@ -283,7 +283,7 @@
       <section id="eraFive" class="spacerFive"> <!--fifthh era 1910ss-->
         <div id="wrap_era_five">  
           <div id="era_five_first" class="time_wrap">
-            <a data-toggle="modal" href="1920.html" data-remote="false" data-target="#eraOneFirst">
+            <a data-bs-toggle="modal" href="1920.html" data-remote="false" data-bs-target="#eraOneFirst">
               <img src="images/1920.png" alt="1920">
             </a>
             <h3 class="year">1920s</h3>
@@ -295,7 +295,7 @@
       <section id="eraSix" class="spacerSix"> <!--fourth era 1910ss-->
         <div id="wrap_era_six">  
           <div id="era_six_first" class="time_wrap">
-            <a data-toggle="modal" href="1931.html" data-remote="false" data-target="#eraOneFirst">
+            <a data-bs-toggle="modal" href="1931.html" data-remote="false" data-bs-target="#eraOneFirst">
               <img src="images/1931.png" alt="1931"> 
             </a> 
             <h3 class="year">1931</h3>
@@ -307,7 +307,7 @@
       <section id="eraSeven" class="spacerSeven"> 
         <div id="wrap_era_seven">  
           <div id="era_seven_first" class="time_wrap">
-            <a data-toggle="modal" href="1940.html" data-remote="false" data-target="#eraOneFirst">
+            <a data-bs-toggle="modal" href="1940.html" data-remote="false" data-bs-target="#eraOneFirst">
               <img src="images/1940.png" alt="1940">
             </a>
             <h3 class="year">1940s</h3>
@@ -319,7 +319,7 @@
       <section id="eraEight" class="spacerEight"> <!--fourth era 1910ss-->
         <div id="wrap_era_eight">  
           <div id="era_eight_first" class="time_wrap">
-            <a data-toggle="modal" href="1957.html" data-remote="false" data-target="#eraOneFirst">
+            <a data-bs-toggle="modal" href="1957.html" data-remote="false" data-bs-target="#eraOneFirst">
               <img src="images/1957.png" alt="1957"> 
             </a> 
             <h3 class="year">1957</h3>
@@ -331,13 +331,13 @@
       <section id="eraNine" class="spacerNine"> <!--fourth era 1910ss-->
         <div id="wrap_era_nine">    
           <div id="era_nine_first" class="time_wrap">
-            <a data-toggle="modal" href="1960.html" data-remote="false" data-target="#eraOneFirst">
+            <a data-bs-toggle="modal" href="1960.html" data-remote="false" data-bs-target="#eraOneFirst">
               <img src="images/1960.png" alt="1960">
             </a>
             <h3 class="year">1960</h3>
           </div><!--  era_nine_first : first image and text wrap -->
           <div id="era_nine_second" class="time_wrap">
-            <a data-toggle="modal" href="1960s.html" data-remote="false" data-target="#eraOneFirst">
+            <a data-bs-toggle="modal" href="1960s.html" data-remote="false" data-bs-target="#eraOneFirst">
               <img src="images/1960s.png" alt="1960s"> 
             </a>
             <h3 class="year">1960s</h3>          
@@ -349,7 +349,7 @@
       <section id="eraTen" class="spacerTen"> <!--fourth era 1910ss-->
         <div id="wrap_era_ten">    
           <div id="era_ten_first" class="time_wrap">
-            <a data-toggle="modal" href="1976.html" data-remote="false" data-target="#eraOneFirst">
+            <a data-bs-toggle="modal" href="1976.html" data-remote="false" data-bs-target="#eraOneFirst">
               <img src="images/1976.png" alt="1976">  
             </a>
             <h3 class="year">1976</h3>
@@ -361,13 +361,13 @@
       <section id="eraEleven" class="spacerEleven"> <!--fourth era 1910ss-->
         <div id="wrap_era_eleven">
           <div id="era_eleven_first" class="time_wrap">
-            <a data-toggle="modal" href="1980.html" data-remote="false" data-target="#eraOneFirst">
+            <a data-bs-toggle="modal" href="1980.html" data-remote="false" data-bs-target="#eraOneFirst">
               <img src="images/1980.png" alt="1980">
             </a>
             <h3 class="year">1980</h3> 
           </div><!--  era_eleven_first : first image and text wrap -->
           <div id="era_eleven_second" class="time_wrap">
-            <a data-toggle="modal" href="1983.html" data-remote="false" data-target="#eraOneFirst">
+            <a data-bs-toggle="modal" href="1983.html" data-remote="false" data-bs-target="#eraOneFirst">
               <img src="images/1983.png" alt="1983"> 
             </a>
             <h3 class="year">1983</h3>          
@@ -379,19 +379,19 @@
       <section id="eraTwelve" class="spacerTwelve"> <!--fourth era 1910ss-->
         <div id="wrap_era_twelve">  
           <div id="era_twelve_first" class="time_wrap">
-            <a data-toggle="modal" href="1992.html" data-remote="false" data-target="#eraOneFirst">
+            <a data-bs-toggle="modal" href="1992.html" data-remote="false" data-bs-target="#eraOneFirst">
               <img src="images/1992.png" alt="1992">
             </a> 
             <h3 class="year">1992</h3>
           </div><!--  era_twelve_first : first image and text wrap -->
           <div id="era_twelve_second" class="time_wrap">
-            <a data-toggle="modal" href="1994.html" data-remote="false" data-target="#eraOneFirst">
+            <a data-bs-toggle="modal" href="1994.html" data-remote="false" data-bs-target="#eraOneFirst">
               <img src="images/1992_2.png" alt="1992">
             </a>
             <h3 class="year">1992</h3>            
           </div><!--  era_twelve_second: image and text wrap -->
           <div id="era_twelve_third" class="time_wrap">
-            <a data-toggle="modal" href="1994_2.html" data-remote="false" data-target="#eraOneFirst">
+            <a data-bs-toggle="modal" href="1994_2.html" data-remote="false" data-bs-target="#eraOneFirst">
               <img src="images/1994.png" alt="1994">
             </a> 
             <h3 class="year">1994</h3>            
@@ -403,19 +403,19 @@
       <section id="eraThirteen" class="spacerThirteen"> <!--fourth era 1910ss-->
         <div id="wrap_era_thirteen">  
           <div id="era_thirteen_first" class="time_wrap">
-            <a data-toggle="modal" href="2000.html" data-remote="false" data-target="#eraOneFirst">
+            <a data-bs-toggle="modal" href="2000.html" data-remote="false" data-bs-target="#eraOneFirst">
               <img src="images/2000.png" alt="2000">
             </a>
             <h3 class="year">2000</h3>
           </div><!--  era_thirteen_first : first image and text wrap -->
           <div id="era_thirteen_second" class="time_wrap">
-            <a data-toggle="modal" href="2004.html" data-remote="false" data-target="#eraOneFirst">
+            <a data-bs-toggle="modal" href="2004.html" data-remote="false" data-bs-target="#eraOneFirst">
               <img src="images/2004.png" alt="2004">
             </a>  
             <h3 class="year">2004</h3>         
           </div><!--  era_thirteen_second: image and text wrap -->
           <div id="era_thirteen_third" class="time_wrap">
-            <a data-toggle="modal" href="2004_2.html" data-remote="false" data-target="#eraOneFirst">
+            <a data-bs-toggle="modal" href="2004_2.html" data-remote="false" data-bs-target="#eraOneFirst">
               <img src="images/2004_2.png" alt="2004">
             </a> 
             <h3 class="year">2004</h3>          
@@ -427,19 +427,19 @@
       <section id="eraFourteen" class="spacerFourteen"> <!--fourth era 1910ss-->
         <div id="wrap_era_fourteen">  
           <div id="era_fourteen_first" class="time_wrap">
-            <a data-toggle="modal" href="2010.html" data-remote="false" data-target="#eraOneFirst">
+            <a data-bs-toggle="modal" href="2010.html" data-remote="false" data-bs-target="#eraOneFirst">
               <img src="images/2010.png" alt="2010">
             </a>
             <h3 class="year">2010</h3> 
           </div><!--  era_four_first : first image and text wrap -->
           <div id="era_fourteen_second" class="time_wrap">
-            <a data-toggle="modal" href="2011.html" data-remote="false" data-target="#eraOneFirst">
+            <a data-bs-toggle="modal" href="2011.html" data-remote="false" data-bs-target="#eraOneFirst">
               <img src="images/2011.png" alt="2011">
             </a> 
             <h3 class="year">2011</h3>          
           </div><!--  era_four_second: image and text wrap -->
           <div id="era_fourteen_third" class="time_wrap">
-            <a data-toggle="modal" href="2015.html" data-remote="false" data-target="#eraOneFirst">
+            <a data-bs-toggle="modal" href="2015.html" data-remote="false" data-bs-target="#eraOneFirst">
               <img src="images/2014.png" alt="2014">
             </a>  
             <h3 class="year">2014</h3>        
